tests/fixtures/invalid/str_floordiv_dict.py
# Cannot floor divide Str and Dict[str, int]
x: str = "hello" // {"a": 1}
